sidecar.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: mypod
spec:
  restartPolicy: Always
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80

  - name: sidecar
    image: ubuntu
    command: ["/bin/bash", "-c"]
    args:
      - |
        while true; do
          if [ -f /tmp/crash ]; then
            exit 1
          fi
          echo "hello from the sidecar"
          sleep 5
        done
