ubuntu_emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-emptydir
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["sleep", "infinity"]
    volumeMounts:
    - name: cache-volume
      mountPath: /cache
  volumes:
  - name: cache-volume
    emptyDir:
      medium: Memory
